coursework, projects, work experience

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>daniel liu</title>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
-  <body style="background-color: #000">
+  <body>
     <noscript>
       <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to
         continue.</strong>
